IVYPORTAL-9262: Portal supports Firefox and Edge - Fixed bug: Statistic Carousel buttons are not aligned on Firefox - Fixed bug: Alignment create form in express on Edge

--- a/AxonIvyPortal/PortalStyle/webContent/resources/serenity-portal/theme.scss
+++ b/AxonIvyPortal/PortalStyle/webContent/resources/serenity-portal/theme.scss
@@ -190,6 +190,10 @@
   color: $statisticCarouselHeaderButtonColor !important;
 }
 
+_::-moz-progress-bar, body:last-child .statistic-carousel .ui-carousel-header .ui-carousel-prev-button {
+  margin-top: 3px;
+}
+
 .statistic-carousel .ui-carousel-header .ui-carousel-next-button:hover,
 .statistic-carousel .ui-carousel-header .ui-carousel-prev-button:hover {
   color: $statisticCarouselHeaderButtonHoverColor !important;
